# CMU-ondeviceML

./: .gitignore  README.md  et --hard HEAD~1
lab1_assign/: LAB1_FINAL.ipynb  LAB1_Notebook.ipynb  config.py  dataset.py  evaluation.py  main.py  mnist_main.py  model.py  pyproject.toml  train.py  utils.py
lab1_assign/.ipynb_checkpoints/: LAB1_Notebook-checkpoint.ipynb  mnist_main-checkpoint.py
lab1_assign/check/: cpu_results.csv  depth_results.csv
lab1_assign/runs/fashion_trainer_20240909_214022/: events.out.tfevents.1725918022.model-tts-v1.718378.0
lab1_assign/runs/fashion_trainer_20240909_214207/: events.out.tfevents.1725918127.model-tts-v1.718378.3
lab1_assign/runs/fashion_trainer_20240910_164426/: events.out.tfevents.1725986666.model-tts-v1.890761.0
lab1_assign/runs/fashion_trainer_20240910_171630/: events.out.tfevents.1725988590.model-tts-v1.897450.0
lab1_assign/runs/fashion_trainer_20240910_171835/: events.out.tfevents.1725988715.model-tts-v1.897963.0
lab1_assign/runs/fashion_trainer_20240910_171933/: events.out.tfevents.1725988773.model-tts-v1.898237.0
lab1_assign/runs/fashion_trainer_20240910_172829/: events.out.tfevents.1725989309.model-tts-v1.901256.0
lab1_assign/runs/fashion_trainer_20240910_173135/: events.out.tfevents.1725989495.model-tts-v1.902133.0
lab1_assign/runs/fashion_trainer_20240910_173215/: events.out.tfevents.1725989535.model-tts-v1.902437.0
lab4_assign/part1/: 3.1_test.py  config.py  main.py  model.py  pyproject.toml  train.py
(+227 files in other folders)
