[tool.poetry]
name = "lab1-assign"
version = "0.1.0"
description = "lab1 assignment"
authors = ["Oyeon <data0311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
git-filter-repo = "^2.45.0"
torch = "^2.4.1"
pandas = "^2.2.2"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"
tensorboard = "^2.17.1"
thop = "^0.1.1.post2209072238"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
